# eurosat-landuse-classifier

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: export.yaml  infer.yaml  train.yaml
configs/logger/: mlflow.yaml
configs/model/: resnet18.yaml  simple_cnn.yaml
configs/trainer/: default.yaml
data/raw/: EuroSAT_RGB.dvc
eurosat_landuse/: commands.py
eurosat_landuse/infer/: predictor.py
eurosat_landuse/models/: factory.py  simple_cnn.py
eurosat_landuse/serving/: mlflow_pyfunc.py
eurosat_landuse/training/: lit_module.py
eurosat_landuse/utils/: git.py  plots.py  repro.py
